--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
-nb_conda=2.2.1
 
-
-
-
+#nlp
+nltk==3.6.2
+spacy==3.0
 captum==0.5.0 #interpretability
+
+#base
+nb_conda==2.2.1
+scikit-learn==0.24.2
+pandas==1.3.1
+matplotlib==3.4.2
+pytorch==1.9.0
+torchvision==0.10.0
+torchaudio==0.9.0
